--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=buensaboruno
 spring.cloud.azure.keyvault.secret.property-sources[0].endpoint=https://claves-backend.vault.azure.net/
+azure.keyvault.tenant-id=de66039b-f4d3-4e1c-b22f-d189f1342afe
 
 
 #spring.h2.console.enabled=true
